# instagram-vector-search

./: README.md  pyproject.toml
chroma_db/: chroma.sqlite3
instagram_vector_search/: __init__.py  app.py  create_mock_data.py  process_data.py
instagram_vector_search/data/: instagram_posts.csv  instagram_posts.json
